<resources>
    <string name="app_name">Ledger</string>
    <string name="current_balance">Current balance</string>
    <string name="log_out">Log out</string>
    <string-array name="transaction_type">
        <item>credit</item>
        <item>debit</item>
    </string-array>
    <string name="add_a_new_item">Add a new item</string>
    <string name="amount">Amount</string>
    <string name="debit">Debit</string>
    <string name="debit_credit">Debit / Credit</string>
    <string name="name">Name: </string>
    <string name="total">Total: </string>
    <string name="item_name">Item Name</string>
    <string name="item_total">Item Total</string>
    <string name="email">Email</string>

    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_details">Account details</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="delete_my_account">Delete my account</string>


</resources>