<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bisque"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:paddingBottom="15dp"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_name"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:layout_marginLeft="8dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:layout_marginStart="8dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:paddingTop="15dp"
                android:text="@string/total"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_total"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:layout_marginLeft="8dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/item_total"
                android:layout_marginStart="8dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>